--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "numpy>=2.0.2",
+    "pytest>=8.3.4",
     "torch>=2.5.1",
     "tqdm>=4.67.1",
 ]
