--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Diffusion models for EAP2"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "jupytext>=1.16.7",
     "numpy>=2.0.2",
     "pytest>=8.3.4",
     "torch>=2.5.1",
