--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,16 @@ description = "Diffusion models for EAP2"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "cupy-cuda12x>=13.3.0",
+    "ipykernel>=6.29.5",
     "jupytext>=1.16.7",
+    "matplotlib>=3.9.4",
+    "numba>=0.60.0",
     "numpy>=2.0.2",
     "pytest>=8.3.4",
+    "scipy>=1.13.1",
     "torch>=2.5.1",
+    "torchvision>=0.21.0",
     "tqdm>=4.67.1",
 ]
 
