--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "numba>=0.60.0",
     "numpy>=2.0.2",
     "pytest>=8.3.4",
+    "scikit-learn>=1.6.1",
     "scipy>=1.13.1",
     "torch>=2.5.1",
     "torchvision>=0.21.0",
