--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pytest>=8.3.4",
     "scikit-learn>=1.6.1",
     "scipy>=1.13.1",
+    "seaborn>=0.13.2",
     "torch>=2.5.1",
     "torchvision>=0.21.0",
     "tqdm>=4.67.1",
